<resources>
    <string name="app_name">problem03</string>
    <string name="amount">Amount</string>
    <string name="number_of_pax">Number of Pax</string>
    <string name="no_svs">NO SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
</resources>